Update gradle settings

--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,21 @@ apply plugin: 'application'
 mainClassName = 'com.gerywahyu.Main'
 
 group 'org.example'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 sourceCompatibility = 1.8
+
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+	manifest {
+        attributes 'Implementation-Title': 'Cutie PDF',  
+        	'Implementation-Version': version,
+        	'Main-Class': 'com.gerywahyu.Main'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
 
 repositories {
     mavenCentral()
